fix(ZiltagPage): set min-size to op-avatar to prevent squashed img caused by flexbox

--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -20,6 +20,8 @@
 .ziltag-ziltag-page__op-avatar {
   width: 56px;
   height: 56px;
+  min-width: 56px;
+  min-height: 56px;
 }
 
 .ziltag-ziltag-page__op-name {
